# ChangeLog for net-misc/youtube-dl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.116 2012/05/23 03:49:16 jer Exp $

  23 May 2012; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2012.01.08.ebuild:
  Old.

  05 May 2012; Brent Baude <ranger@gentoo.org> youtube-dl-2012.02.27.ebuild:
  Marking youtube-dl-2012.02.27 ppc for bug 412413

  19 Apr 2012; Jeroen Roovers <jer@gentoo.org> youtube-dl-2012.02.27.ebuild:
  Stable for HPPA (bug #412413).

  19 Apr 2012; Brent Baude <ranger@gentoo.org> youtube-dl-2012.02.27.ebuild:
  Marking youtube-dl-2012.02.27 ppc64 for bug 412413

  18 Apr 2012; Jeff Horelick <jdhore@gentoo.org> youtube-dl-2012.02.27.ebuild:
  marked x86 per bug 412413

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> youtube-dl-2012.02.27.ebuild:
  Stable for amd64, wrt bug #412413

  17 Apr 2012; Jeroen Roovers <jer@gentoo.org> youtube-dl-2012.01.08.ebuild,
  youtube-dl-2012.02.27.ebuild:
  Fix HOMEPAGE.

  17 Apr 2012; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2011.08.04.ebuild:
  Old.

  17 Apr 2012; Brent Baude <ranger@gentoo.org> youtube-dl-2012.01.08.ebuild:
  Marking youtube-dl-2012.01.08 ppc64 for bug 409753

  17 Apr 2012; Brent Baude <ranger@gentoo.org> youtube-dl-2012.01.08.ebuild:
  Marking youtube-dl-2012.01.08 ppc for bug 409753

  04 Apr 2012; Jeff Horelick <jdhore@gentoo.org> youtube-dl-2012.01.08.ebuild:
  marked x86 per bug 409753

  29 Mar 2012; Jeroen Roovers <jer@gentoo.org> youtube-dl-2012.01.08.ebuild:
  Stable for HPPA (bug #409753).

  28 Mar 2012; Agostino Sarubbo <ago@gentoo.org> youtube-dl-2012.01.08.ebuild:
  Stable for AMD64, wrt bug #409753

  26 Mar 2012; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2011.08.04.ebuild:
  Reinstate stable ebuild by Boris (bug #409723).

*youtube-dl-2012.02.27 (21 Mar 2012)

  21 Mar 2012; Patrick Lauer <patrick@gentoo.org> +youtube-dl-2012.02.27.ebuild,