@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST youtube-dl-2012.02.27.tar.gz 75108 RMD160 3e7edd4fe1747a54bf5a844910cb5d41d16d529d SHA1 66eee68273753e7d0c9c29072fece3dd9c0f297c SHA256 cac5966e0637ed737704e31390dd9c9701b6c3d721a9bc2bdcae9aa09495cf6e
-EBUILD youtube-dl-2012.02.27.ebuild 814 RMD160 e4a3d1301e328573d19cbb5658fded4e672e8053 SHA1 a8dd4e088053e9eb783066f8944555cd3b41f9ef SHA256 1a90b2e4417a376359e8aa3ea64945bf3897ca29a2183b23ff66d2de0dc0b76e
-MISC ChangeLog 16467 RMD160 35a88c047f859ee75c69838df46f9bf90599db3d SHA1 0071aa1b1c12258d786a379e80fbfe0b32430de3 SHA256 8ff8b221db6e0c3d8e7a5593c9c3b3eb0c171cb03302d766fb464c9cc5865a2b
-MISC metadata.xml 274 RMD160 c96ba05fc833ca2e863845f5b6ff4f5ab35e3fad SHA1 a2b41c288786bf9db765336a14b5435203d32cae SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69
+DIST youtube-dl-2012.02.27.tar.gz 75108 SHA256 cac5966e0637ed737704e31390dd9c9701b6c3d721a9bc2bdcae9aa09495cf6e SHA512 e469fdde76a79d7d3a8e9928bb800efbfb1ee7a978e77fc7f4ef7702e8381a9158fddfb8adfc0348473391081af6a61f1125afe23234bc0308096eb760e69a74 WHIRLPOOL 79d5ac52734c4d506d64a6cfd690da0479edcc5b24c5c97fba7589706f36c06f712729eca647531f7937c864b94a29aab664eae5cd12fbb4bc43bc816687d048
+DIST youtube-dl-2012.09.27.tar.gz 2874838 SHA256 45e88c1a5b81e633bddd43d5363e7ade92af2eeb534c37a5170f4b68d73605ea SHA512 3e77f86495457a7c933a9183e9dae45cad74ae98c0f926403b292c38d060c148a483a30186b8cfc35920033ae262f3cddba7f3b36a0c33245aa898fcaa152a59 WHIRLPOOL f6f8c4e40884aa5490c0e5cbc844291ccf5bf80805ca022cbc9134796c1d187eb70d73e1197aab48460ee814625a2234c65ce8d3448d7f40bae0192a2ccc6563
+EBUILD youtube-dl-2012.02.27.ebuild 814 SHA256 1a90b2e4417a376359e8aa3ea64945bf3897ca29a2183b23ff66d2de0dc0b76e SHA512 f1edb0ab4fc2292da284783877e5995d714fa203015c51de3b96d89290e1eb55fbae20479ad872828d43630ce0df18dc9e6e6976a95dad39f215cf8ba0d796e9 WHIRLPOOL a1c61d40c9b762102722751bd3bf0c2440c2458a5c8b4b1aa5987bc657b404450c42641ada16b45ac3feb3aeda788da3821a07355bb991f88b127ede4044dc47
+EBUILD youtube-dl-2012.09.27.ebuild 816 SHA256 b3cf7349f6d1dfb8d6b6867f25ff9be2ed6f18ee1631e41bda7cb2cb79f60914 SHA512 92774b6a63555d10ae41eb1c5ca39bb4062ee53d74a61455ea6ac16a3d689878a9dec9851aa88dca3f858b95b70b02eb6c278b721e7f7f8109328b92ca35609f WHIRLPOOL a7efbddc38758e12655828eff55ca0bc2882724eb84f8d6a9ff07009689821838673c545d6d8e7c9dd591c6119984e2faab5e2b7db9d2d710091c15938f59938
+MISC ChangeLog 16634 SHA256 bb6865447da15ac6c990b5554657ea613ce44e482236c5e9d1d05c8112857d50 SHA512 a42f6257bc14c31ed1377557df5b3c78df071315d33dc21842ef9ded499c70ec842ad44bbc6dc729be532e15e9d8e2828a52fa7e9e14049acaec3ee7c88de9f3 WHIRLPOOL 62f2bc3ba746ced63631f27d0d2d733a0d98c6e197efb17bd19d4f92edb5da12fc47d080e4dd280d791122eeb68493f6a085d0f03535c04b379278f5b7d36bdd
+MISC metadata.xml 274 SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69 SHA512 acfb3695928ebf2ee87c75f06c7ab47a65f4aa8564b1426ee523a1a5c853ed56df0de4cba186ac003383a27dfa9d21e4f4ff44b48e152c406a918f1b01ca358b WHIRLPOOL 0f245af71a769b0d4eb9bb57a99599a0875ad0373a830ff9e8215a077d3d2f02e916b7b25d275b19b5139810608abddfada68d3d0f2e9191351d26ba716b623b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk+8XkEACgkQVWmRsqeSphMetgCfauOy9PlYEssacUyCIQCnhnYl
-yV8An1ARnzic+3TSABlqoFgBxGO+eW/s
-=W4jL
+iEYEAREIAAYFAlBlzU8ACgkQVWmRsqeSphPNOgCggUuxyrdV2ZCrH2EeCh4c/u/E
+w5cAnjvilYWWgte06olPz60T7gipDy/V
+=aWIX
 -----END PGP SIGNATURE-----
