@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.116 2012/05/23 03:49:16 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.117 2012/09/28 16:16:10 jer Exp $
+
+*youtube-dl-2012.09.27 (28 Sep 2012)
+
+  28 Sep 2012; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2012.09.27.ebuild:
+  Version bump by Andrew Savchenko (bug #436464).
 
   23 May 2012; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2012.01.08.ebuild:
   Old.
